tests/__snapshots__/api-template-stderr.snap.txt
Error: Type 'string' is not identical to type 'number'.

  5 | });
  6 | test("is number a string?", () => {
  7 |   expect<string>().type.toBe<number>();
    |                              ~~~~~~
  8 | });
  9 | 

      at ./__typetests__/template.tst.ts:7:30 â­ is number a string?

